# airflow-example

./: .gitignore  .nojekyll  README.md  _config.yml  airflow.example.cfg  docker-compose.yml  pyproject.toml
.github/workflows/: jekyll.yml
dags/: 01_hello_world.py  01_hola_mundo.py  02_data_pipeline.py
docker/: Dockerfile  requirements.txt
standalone/: airflow.example.cfg  requirements.txt
