[project]
name = "airflow-learning"
version = "0.1.0"
description = "Apache Airflow samples"
authors = [
    {name = "Jose Meira"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "apache-airflow (>=2.7.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
